--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.6.16
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2.5
+django-cors-headers==3.1.0
 django-crispy-forms==1.4.0
 django-durationfield==0.5.1
 django-heroku==0.3.1
@@ -10,7 +11,7 @@ django-jet==1.0.8
 djangorestframework==3.10.3
 gunicorn==19.9.0
 idna==2.8
-lxml==4.4.1
+lxml==3.4.4
 psycopg2==2.8.3
 python-dateutil==2.4.2
 pytz==2019.2
